Added the What we do page, changed the People page layout.

--- a/members/smolikfilip.qmd
+++ b/members/smolikfilip.qmd
@@ -2,7 +2,7 @@
 title: "prof. PhDr. Filip Smolík, Ph.D., DSc."
 image: person_he.jpg
 categories: Researcher
-description: ""
+description: "Researcher at EAGLELab"
 about:
   template: trestles
   image: person_he.jpg
