--- a/members/preininger_mikulas.qmd
+++ b/members/preininger_mikulas.qmd
@@ -2,7 +2,7 @@
 title: "Mgr. Mikuláš Preininger, Ph.D."
 image: preininger_mikulas.jpg
 categories: Researcher
-description: ""
+description: "Researcher at EAGLELab"
 about:
   template: trestles
   image: preininger_mikulas.jpg
