--- a/members/01-smolik_filip.qmd
+++ b/members/01-smolik_filip.qmd
@@ -17,4 +17,17 @@ In my research, with mebers of EAGLeLab or other collaborators, I study how the 
 I got my PhD. from the [Child Langauge Doctoral Program](https://cldp.ku.edu/) at the University of Kansas, with [Mabel Rice](https://cldp.ku.edu/people/mabel-l-rice) as my supervisor.
 
 ### Selected publications
+(for complete list, see [ORCID](https://orcid.org/0000-0003-4160-6124), [Google Scholar](https://scholar.google.cz/citations?user=GuE00EoAAAAJ&hl=en) or [ResearchGate](https://www.researchgate.net/profile/Filip-Smolik/research).
+
+Gerwien, J., Filip, M., & Smolík, F. (2024). Noun imageability and the processing of sensory-based information. *Quarterly Journal of Experimental Psychology*, *77*(10), 2137-2150.
+
+Smolik, F., & Chromá, A. (2023). About me, you and her: Personal pronouns are developmentally preceded by mental state language. *Journal of Child Language*, 50(3), 537-554.
+
+Smolík, F., & Bláhová, V. (2022). Here come the nouns: Czech two-year-olds use verb number endings to predict sentence subjects. *Cognition*, *219*, 104964.
+
+Smolík, F., & Matiasovitsová, K. (2021). Sentence imitation with masked morphemes in Czech: Memory, morpheme frequency, and morphological richness. *Journal of Speech, Language, and Hearing Research*, *64*(1), 105-120.
+
+Smolík, F., & Bláhová, V. (2019). Czech 23-month-olds use gender agreement to anticipate upcoming nouns. *Journal of Experimental Child Psychology*, *178*, 251-265.
+
+Smolík, F. (2015). Word order and information structure in Czech 3-and 4-year-olds’ comprehension. *First language*, *35*(3), 237-253.
 
