--- a/members/03-chroma_anna.qmd
+++ b/members/03-chroma_anna.qmd
@@ -2,11 +2,10 @@
 title: "Mgr. Anna Chromá"
 image: chroma_anna.jpg
 categories: Researcher
-description: "Researcher at EAGLELab"
+description: "Doctoral student"
 about:
   template: trestles
   image: chroma_anna.jpg
   image-shape: round
 ---
 
-I am a member of EAGLELab.
