Added more information about a member, fixed typos

--- a/members/01-smolik_filip.qmd
+++ b/members/01-smolik_filip.qmd
@@ -8,11 +8,9 @@ about:
   image: smolik_filip.jpg
   image-shape: round
 ---
-
 I am the leader of EAGLeLab, and hold a position of a senior research scientist at the [*Institute of Psychology, Czech Academy of Sciences*](https://psu.cas.cz/en/). I also do some teaching at the [*Faculty of Arts, Charles University*](https://www.ff.cuni.cz/) in Prague.
 
-
-In my research, with mebers of EAGLeLab or other collaborators, I study how the knowledge of language works in children and adults, and how children learn language. I am particularly interested in children's knowledge of grammar, such as how children learn what nouns and verbs are, how these word types fit in the sentences, and how they can be inflected. The knowledge and development of language are related to many other topics in cognitive science, psychology or linguistic, so I get to contribute to projects addressing a number of research questions. In addition to the fundamental science questions, I also work on tools for assessment and evaluation of language and cognitive skills in children.
+In my research, with mebers of EAGLeLab or other collaborators, I study how the knowledge of language works in children and adults, and how children learn language. I am particularly interested in children's knowledge of grammar, such as how children learn what nouns and verbs are, how these word types fit in the sentences, and how they can be inflected. The knowledge and development of language are related to many other topics in cognitive science, psychology or linguistics, so I get to contribute to projects addressing a number of research questions. In addition to the fundamental science questions, I also work on tools for assessment and evaluation of language and cognitive skills in children.
 
 I got my PhD from the [Child Langauge Doctoral Program](https://cldp.ku.edu/) at the University of Kansas, with [Mabel Rice](https://cldp.ku.edu/people/mabel-l-rice) as my supervisor.
 
