--- a/members/03-chroma_anna.qmd
+++ b/members/03-chroma_anna.qmd
@@ -8,4 +8,14 @@ about:
   image: chroma_anna.jpg
   image-shape: round
 ---
+I am a PhD student and a junior researcher at Faculty of Arts, Charles University, and a junior researcher at the [*Institute of Psychology, Czech Academy of Sciences*](https://psu.cas.cz/en/).
 
+I founded the group [*CoCzeFLA*](https://coczefla.ff.cuni.cz/) under which child language corpora are built and I further work to develop it. My PhD project is concerned with the acquision of *I* and *You* pronouns and other ways of referring to self and others. Within EAGLeLab, I study early comprehension of case morphology in Czech, also in comparison to German.
+
+### Selected publications
+
+Chromá, A., Sláma, J., Matiasovitsová, K., & Treichelová, J. (2025). A morphologically tagged longitudinal corpus of spoken Czech child-adult interactions. *Language Resources and Evaluation*, *59*(1), 413-436.
+
+Smolik, F., & Chromá, A. (2023). About me, you and her: Personal pronouns are developmentally preceded by mental state language. *Journal of Child Language*, *50*(3), 537-554.
+
+Chromá, A. & Smolík, F. (2017). Personal pronouns and verb person inflections: Relations with linguistic development and social understanding. In LaMendola, M. & Scott, J. (Eds), *Proceedings of the 41st annual Boston University Conference on Language Development* (pp.168-178). Cascadilla Press.
