--- a/members/02-skarabela_barbora.qmd
+++ b/members/02-skarabela_barbora.qmd
@@ -1,9 +1,7 @@
 ---
-title: "Mgr. Lukáš Jiřička"
+title: "Barbora Skarabela"
 categories: Researcher
-description: "Doctoral student"
 about:
   template: trestles
   image-shape: round
 ---
-
