Added more entries to the Publications and presentations list Created categories in the Publications and presentations list Changed the "Publication" field to "Title" to better reflect the varied nature of the entries

--- a/publications.qmd
+++ b/publications.qmd
@@ -4,7 +4,7 @@ listing:
   contents: 
     - publications.yml
   sort: "Year desc"
-  fields: ["Publication", "Year", ]
+  fields: ["Title", "Year", ]
   field-types:
     Year: number
   #   End: number
