Restructured the site structure - Moved the images to a separate folder - Added pdf files - Added links to the pdf files in the Publications and presentations pane - Added a member bio

--- a/index.qmd
+++ b/index.qmd
@@ -3,7 +3,7 @@ title: "EAGLeLab"
 description: "Early Acquisition of Grammar and LExicon"
 about:
   template: trestles
-  image: logo.png
+  image: /images/logo.png
   image-shape: rectangle
 ---
 
