--- a/members/05-matiasovitsova_klara.qmd
+++ b/members/05-matiasovitsova_klara.qmd
@@ -1,11 +1,11 @@
 ---
 title: "Klára Matiasovitsová"
-image: matiasovitsova_klara.jpg
+image: /images/matiasovitsova_klara.jpg
 categories: Researcher
 description: "Doctoral student"
 about:
   template: trestles
-  image: matiasovitsova_klara.jpg
+  image: /images/matiasovitsova_klara.jpg
   image-shape: round
 ---
 I am a PhD student and a junior researcher at the [*Faculty of Arts, Charles University*](https://www.ff.cuni.cz/), and a junior researcher at the [*Institute of Psychology, Czech Academy of Sciences*](https://psu.cas.cz/en/).
