--- a/members/06-treichelova_jolana.qmd
+++ b/members/06-treichelova_jolana.qmd
@@ -1,11 +1,11 @@
 ---
 title: "Jolana Treichelová"
-image: treichelova_jolana.jpg
+image: /images/treichelova_jolana.jpg
 categories: Researcher
 description: "Doctoral student"
 about:
   template: trestles
-  image: treichelova_jolana.jpg
+  image: /images/treichelova_jolana.jpg
   image-shape: round
 ---
 I am a PhD student at the [*Faculty of Arts, Charles University*](https://www.ff.cuni.cz/), and a junior researcher at the [*Institute of Psychology of the Czech Academy of Sciences*](https://psu.cas.cz/en/).
