Added a publication to member bio

--- a/members/06-treichelova_jolana.qmd
+++ b/members/06-treichelova_jolana.qmd
@@ -11,3 +11,7 @@ about:
 I am a PhD student at the [*Faculty of Arts, Charles University*](https://www.ff.cuni.cz/), and a junior researcher at the [*Institute of Psychology of the Czech Academy of Sciences*](https://psu.cas.cz/en/).
 
 As part of my PhD project, I am interested in how Czech-speaking children comprehend and process grammar, particularly the interaction of word order and case marking. Using eye-tracking and behavioural methods, I focus on predictive sentence processing and how children resolve conflicts between different linguistic cues. I am also currently involved in coordinating morphological annotation for the ChroMat corpus within the [*CoCzeFLA*](https://coczefla.ff.cuni.cz/) project.
+
+### Selected publications
+
+Chromá, A., Sláma, J., Matiasovitsová, K., & Treichelová, J. (2025). A morphologically tagged longitudinal corpus of spoken Czech child-adult interactions. *Language Resources and Evaluation*, *59*(1), 413-436.
