--- a/index.qmd
+++ b/index.qmd
@@ -11,7 +11,7 @@ Early language acquisition research group of the [Institute of Psychology, Czech
 
 Our research examines various questions about how people learn and use language, especially in early childhood. We are interested in mental mechanisms that make it possible for people to learn, remember and use words and their meanings, rules and regularities of sentences and word forms, and mutual relations between different parts of the language system.
 
-The leader of the group is [Filip Smolík](/members/01-smolik_filip.qmd) and the group works in collaboration with [LABELS](https://labels.ff.cuni.cz/), joint lab of the Institute of Psychology CAS and Faculty of Arts, Charles University, and the ERCEL research group at the Faculty of Arts, Charles University.
+The leader of the group is [Filip Smolík](/members/01-smolik_filip.qmd) and the group works in collaboration with [LABELS](https://labels.ff.cuni.cz/), joint lab of the Institute of Psychology CAS and Faculty of Arts, Charles University, and the [ERCEL](https://ercel.ff.cuni.cz/) research group at the Faculty of Arts, Charles University.
 
 
 [More about our team](people.qmd)
