--- a/members/02-skarabela_barbora.qmd
+++ b/members/02-skarabela_barbora.qmd
@@ -16,19 +16,19 @@ I joined the University of Edinburgh as a Teaching Fellow in Language Acquisitio
 
 ### Selected publications
 
-Soderstrom, M., Rocha-Hidalgo, J., Muñoz, L.E., et al. (2025). Testing the relationship between preferences for infant-directed speech and vocabulary development: A multi-lab study. *Journal of Child Language*, *52*(5), 984-1009. https://doi.org/10.1017/S0305000924000254
+Soderstrom, M., Rocha-Hidalgo, J., Muñoz, L.E., et al. (2025). Testing the relationship between preferences for infant-directed speech and vocabulary development: A multi-lab study. *Journal of Child Language*, *52*(5), 984-1009. <https://doi.org/10.1017/S0305000924000254>
 
 Skarabela, B. (2025, June 19-20). *Czeching the grammar: How do children learn complex morphosyntax?* LangInLife ISAB conference, Brno, Czech Republic.
 
 Skarabela, B., Cuthbert, N., Rees A., Rohde, H., & Rabagliati, H. (2023). Learning dimensions of meaning: Children's acquisition of "but". *Cognitive Psychology*, *147*, 101597-101597. 
-https://doi.org/10.1016/j.cogpsych.2023.101597
+<https://doi.org/10.1016/j.cogpsych.2023.101597>
 
-Ota, M., Davies-Jenkins, N., & Skarabela, B. (2018). Why choo-choo is better than train: The role of register- specific words in early vocabulary development. *Cognitive Science*, *42*(6), 1974-1999. https://doi.org/10.1111/cogs.12628
+Ota, M., Davies-Jenkins, N., & Skarabela, B. (2018). Why choo-choo is better than train: The role of register- specific words in early vocabulary development. *Cognitive Science*, *42*(6), 1974-1999. <https://doi.org/10.1111/cogs.12628>
 
-Skarabela, B. & Ota, M. (2017). Two-year-olds but not younger children comprehend "it" in ambiguous contexts: Evidence from preferential looking. *Journal of Child Language*, *44*(1), 255-268. https://doi.org/10.1017/S0305000915000781
+Skarabela, B. & Ota, M. (2017). Two-year-olds but not younger children comprehend "it" in ambiguous contexts: Evidence from preferential looking. *Journal of Child Language*, *44*(1), 255-268. <https://doi.org/10.1017/S0305000915000781>
 
-Skarabela, B., Allen, S. E. M. & Scott-Phillips, T. C. (2013). Joint attention helps explain why children omit new referents. *Journal of Pragmatics*, *56*, 5-14. https://doi.org/10.1016/j.pragma.2012.08.003
+Skarabela, B., Allen, S. E. M. & Scott-Phillips, T. C. (2013). Joint attention helps explain why children omit new referents. *Journal of Pragmatics*, *56*, 5-14. <https://doi.org/10.1016/j.pragma.2012.08.003>
 
-Allen, S. E. M., Skarabela, B., & Hughes, M. (2008). Using corpora to examine discourse effects in syntax. In H. Behrens (Ed.), *Trends in Language Aquisition Research: Corpora in Language Acquisition Research: History, methods, perspectives* (TiLAR; Vol. 6, pp. 99-137). John Benjamins Publishing Company. https://doi.org/10.1075/tilar.6
+Allen, S. E. M., Skarabela, B., & Hughes, M. (2008). Using corpora to examine discourse effects in syntax. In H. Behrens (Ed.), *Trends in Language Aquisition Research: Corpora in Language Acquisition Research: History, methods, perspectives* (TiLAR; Vol. 6, pp. 99-137). John Benjamins Publishing Company. <https://doi.org/10.1075/tilar.6>
 
-Skarabela, B. (2007). Signs of early social cognition in children's syntax: The case of joint attention in argument realization in child Inuktitut. *Lingua*, *117*(11), 1837-1857. https://doi.org/10.1016/j.lingua.2006.11.010
+Skarabela, B. (2007). Signs of early social cognition in children's syntax: The case of joint attention in argument realization in child Inuktitut. *Lingua*, *117*(11), 1837-1857. <https://doi.org/10.1016/j.lingua.2006.11.010>
