Added member bio.

--- a/members/08-outhmane_rassili.qmd
+++ b/members/08-outhmane_rassili.qmd
@@ -1,10 +1,23 @@
 ---
 title: "Outhmane Rassili"
+image: /images/rassili_outhmane.jpg
 categories: Researcher
 description: "Postdoctoral researcher"
 about:
   template: trestles
+  image: /images/rassili_outhmane.jpg
   image-shape: round
 ---
+I am a postdoctoral researcher at the [*Institute of Psychology, Czech Academy of Sciences*](https://psu.cas.cz/en/). I hold a Master’s degree in Cognitive Neuroscience of Language from the [*Basque Center on Cognition, Brain and Language (BCBL)*](https://www.bcbl.eu/es) and a PhD in Cognitive Science/Psycholinguistics from Aix-Marseille University, where I specialized in speech perception, phonology, and prosody during my stay the [*Laboratoire Parole et Langage (LPL)*](https://www.lpl-aix.fr/en/welcome-to-lpl/).
 
+As a psycholinguist and phonetician, I combine electroencephalography (EEG) with behavioral methods to investigate the neural and cognitive mechanisms underlying speech processing. My research focuses on how phonological and morphological structures shape language processing and acquisition, with particular attention to their role in lexical access and the mental representations of language.
 
+### Selected publications
+
+Rassili, O., Michelas, A., & Dufour, S. (2024) On the perception of stress position by French listeners: An EEG investigation. *Brain and Language*, *251*, 105393 <https://doi.org/10.1016/j.bandl.2024.105393>
+
+Rassili, O., Michelas, A., & Dufour, S. (2023) Does accentual variation in the pronunciation of French words influence their recognition? It depends on the ear of presentation. *JASA Express Letters*, *3*(3). <https://doi.org/10.1121/10.0017516>
+
+Tachakourt, Y., & Rassili, O. (2023) More cues or more languages? word segmentation using statistical learning in multilinguals, bilinguals, and monolinguals. International *Journal of Multilingualism*, 1–17. <https://doi.org/10.1080/14790718.2023.2239836>
+
+Rassili, O., & Ordin, M. (2020) The effect of regular rhythm on the perception of linguistic and non-linguistic auditory input. *European Journal of Neuroscience*, *55*(11–12), 3365–3372. <https://doi.org/10.1111/ejn.15029>
